<resources>
    <string name="app_name">AllEarsDeaf</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>FlOAT</item>
    </string-array>

    <string name="device">Device:</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>


    <string name="action_settings">Settings</string>
    <string name="title_menu">Menu</string>
    <!--  Ressources for the Drawer and option menu !-->
    <string-array name="dm_list_array">
        <item>Speech2Sign</item>
        <item>Sign2Speech</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Speech2Sign</string>
    <string name="title_activity_settings">Settings</string>

    <string name="policy_legal_age">I have the legal age for using this app</string>
    <string name="policy_agree_statement">I agree with The AllEarsDeaf Policy Privacy</string>
    <string name="policy_button_continue">Continue</string>
    <string name="privacy_policy_webpage">file:///android_asset/html/privacy_policy.html</string>
    <string name="privacy_policy_title">Privacy Policy</string>

    <string name="settings_category_profile">User profile</string>
    <string name="title_settings_user_s_profil">User profile</string>
    <string name="user_s_profile">what user profile are you?</string>
    <string-array name="profile">
        <item>I am a deaf / hard hearing person</item>
        <item>I am a hearing person</item>
    </string-array>
    <string name="title_settings_language">Language</string>
    <string name="settings_language_summary">Change default application language</string>
    <string name="your_speech_hint">Your speech :  </string>
    <string name="speech_location_hint">The speech will be shown as text in here</string>
    <string name="sentiment_hint">You seem to be : </string>
    <string name="classifier_activity_label">Sign2Speech</string>
    <string-array name="profile_values">
        <item>Deaf/Hard hearing</item>
        <item>Hearing</item>
    </string-array>
    <string-array name="menu_values">
        <item>MENU</item>
        <item>SPEECHTOSIGN</item>
        <item>SIGNTOSPEECH</item>
    </string-array>
 </resources>
