<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_profile"
        >

        <ListPreference
            android:key="settings_profile"
            android:title="@string/title_settings_user_s_profil"
            android:defaultValue="NONE"
            android:summary="@string/settings_category_profile"
            android:entryValues="@array/profile_values"
            android:entries="@array/profile"
            />


        <Preference
            android:key="settings_user_language"
            android:title="@string/title_settings_language"
            android:summary="@string/settings_language_summary"
        />

    </PreferenceCategory>

</PreferenceScreen>