<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_privacy_policy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tn.iheb.allearsdeaf.PrivacyPolicyActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start">
    <WebView
        android:layout_width="match_parent"
        android:id="@+id/privacy_policy_webview"
        android:layout_height="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"
        android:layout_weight="1"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_legal_age_checkbox"
        android:text="@string/policy_legal_age"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_agree_checkbox"
        android:text="@string/policy_agree_statement"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_agree_continue_button"
        android:layout_gravity="right"
        android:text="@string/policy_button_continue"
        android:enabled="false"/>
</LinearLayout>
</RelativeLayout>
