<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        tools:ignore="ContentDescription">


        <TextView
            android:id="@+id/text2"
            style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/your_speech_hint"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/text"
            style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:gravity="center_horizontal"
            android:hint="@string/speech_location_hint"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/text3"
            style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:gravity="center_horizontal"
            android:text="@string/sentiment_hint"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/text1"
            style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text3"
            android:gravity="center_horizontal"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/todisplay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/text1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:src="@color/black_overlay"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/todisplay"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            tools:ignore="ContentDescription">

            <ImageView
                android:id="@+id/speak"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/microphone_icon"
                 />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/video_icon" />
        </LinearLayout>


    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        style="@android:style/Widget.Material.ListView"
        android:layout_width="@dimen/list_view_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/R1_SL_level"
        android:cacheColorHint="@android:color/background_dark"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</androidx.drawerlayout.widget.DrawerLayout>


